<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.moyinoluwa.gdgngevents.ItemListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayLight"
    android:orientation="vertical"
    tools:context="com.moyinoluwa.gdgngevents.ItemListActivity">

    <LinearLayout
        android:id="@+id/gdg_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:visibility="gone">

        <TextView
            android:id="@+id/no_gdgs_available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/no_gdgs_available"
            android:textSize="@dimen/no_event_text" />

        <TextView
            android:id="@+id/gdg_intro_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/select_your_gdg"
            android:textSize="@dimen/no_event_text"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/gdg_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:visibility="gone" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/submit"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:id="@+id/no_events_available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/no_events_available"
        android:textSize="@dimen/no_event_text" />

    <TextView
        android:id="@+id/event_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/event_type_size"
        android:textStyle="bold"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/item_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layoutManager="LinearLayoutManager"
        tools:context="com.moyinoluwa.gdgngevents.ItemListActivity" />

</LinearLayout>
